Added auto generated python flask server from swagger code gen
